sun.misc.BASE64Encoder替换为java.utils.Base64